--- a/css/theme.less
+++ b/css/theme.less
@@ -14,41 +14,38 @@ h1,h2,h3,h4,h5,h6,p {
     padding: 0;
 }
 	.top_menu{
-
-		
-		
-		
+		position: relative;
 		}
 	.slideshow{
 		
-		background-color: #fff;
-		
+		background-color: @color-blue;
+		position: absolute;
 	}
 	.page_animation{
-		
+		position: relative;
 		background-color: #fff;
 	}
 	.courses{
-		
+		position: relative;
 		background-color: @color-siver;
 	}
 	.learnfrom{
-		
+		position: relative;
 		background-color: #fff;
 	}
 	.plans_pricing{
-		
+		position: relative;
 		background-color: @color-siver;
 	}
 	.courses_item{
-		
+		position: relative;
 		background-color: #fff;
 	}
 	.slide_footer{
-		
+		position: relative;
 		background-color:@color-blue;
 	}
 	.footer{
-		
+		position: relative;
 		background-color:@color-black;
 	}
